--- a/CC4E/PersonalWebstite/style.css
+++ b/CC4E/PersonalWebstite/style.css
@@ -1,49 +1,132 @@
-*{
+@import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
+* {
     margin: 0;
     padding: 0;
+    list-style-type: none;
 }
-@import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
-    h1, h2 {
-        font-family: "Satisfy", cursive;
-    }
 .header-container {
     width: 100%;
     height: 100vh;
-    background-color: aquamarine;
+    background-color:rgb(187, 243, 224);
     position: relative;
 }
-#cloud-1{
+#cloud-1 {
     position: absolute;
     top: 25%;
     right: 15%;
 }
-#cloud-2{
+#cloud-2 {
     position: absolute;
+    top: 35%;
     left: 20%;
-    top: 30%;
+    
 }
-#cloud-3{
+#cloud-3 {
     position: absolute;
-    left: 55%;
-    bottom: 45%;
+    left: 50%;
+    bottom: 35%;
 }
-#mountain{
+#mountain {
     position: absolute;
-    bottom: 30%;
+    bottom: 10%;
     left: 50%;
     transform: translate(-50%, 0);
     /* translate dùng cho element dịch chuyển */
 }
-#cloud-4{
+#cloud-4 {
     position: absolute;
-    left: 41%;
-    bottom: 55%;
+    left: 36%;
+    bottom: 30%;
 }
-.text{
+.text {
     color: #66bfbf;
     text-align: center;
     position: absolute;
     top: 25%;
     left: 50%;
     transform: translate(-50%, 0);
+}
+.text  h1, h2 {
+    font-family: "Satisfy", cursive;
+}
+.text h1 {
+    font-size: 60px;
+}
+.text h2 {
+    font-size: 46px;
+}
+.contend {
+    height: 70vh;
+    background-color: #e4f9f5;
+    text-align: center;
+}
+.contend img {
+    margin-top: 100px;
+    border-radius: 50%;
+}
+.contend h1 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 40px;
+    color: #66bfbf;
+    margin: 50px 0;
+}
+.contend p {
+    font-size: 23px;
+}
+.contend div {
+    margin: 50px auto;
+    width: 5%;
+    border-color: #66bfbf;
+    border-width: 6px;
+    border-style: dashed;
+}
+.skill {
+    height: 100vh;
+    margin: 0 300px;
+}
+.contact {
+
+    background-color: #e4f9f5;
+    text-align: center;
+}
+.contact h1 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 40px;
+    color: #66bfbf;
+    padding: 80px 0;
+}
+.contact h3 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 24px;
+    color: #66bfbf;
+    padding-bottom: 30px;
+}
+.contact p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    width: 60%;
+    margin: auto;
+    padding-bottom: 30px;
+}
+.contact input {
+    color: white;
+    background-color:#66bfbf;
+    font-size: 18px;
+    width: 150px;
+    height: 50px;
+    margin: auto;
+    border: none;
+    border-radius: 10%;
+    margin-bottom: 80px;
+}
+.contact input:hover {
+    background-color:#017676;
+}
+.footer {
+    text-align: center;
+}
+.footer li {
+    
 }
