--- a/CC4E/HomeWork/PersonalFoodShop/style.css
+++ b/CC4E/HomeWork/PersonalFoodShop/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&family=Delicious+Handrawn&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -15,6 +18,9 @@ nav {
     -webkit-box-shadow: 1px 11px 43px 7px rgba(0, 0, 0, 0.48);
     -moz-box-shadow: 1px 11px 43px 7px rgba(0, 0, 0, 0.48);
 }
+nav h2 {
+    font-family: 'Alkatra', cursive;
+}
 
 .nav-list {
     display: flex;
@@ -31,7 +37,7 @@ nav {
 aside {
     background-color: rgb(222, 233, 233);
     width: 30%;
-    height: 100vh;
+    /* height: 100vh; */
     padding-top: 30px;
     display: flex;
     align-items: center;
@@ -62,20 +68,20 @@ aside button:hover {
 
 section {
     width: 70%;
-    height: 100vh;
     padding-top: 30px;
-    /* display: grid;
-    grid-template-columns: 20% 20% 20% 20%;
-    grid-template-rows: repeat(3 200px); */
-    display: flex;
+    padding-bottom: 30px;
+    display: grid;
+    grid-template-columns: repeat(4, 20%);
+    grid-template-rows: auto;
     flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 30px 30px;
+    justify-content: space-evenly;
+    gap: 50px 0;
 }
 
 .product {
-    width: 20%;
+    font-family: 'Delicious Handrawn', cursive;
     border-radius: 5%;
+    font-size: 30px;
     box-shadow: -1px 1px 21px 2px rgba(0, 0, 0, 0.48);
     -webkit-box-shadow: -1px 1px 21px 2px rgba(0, 0, 0, 0.48);
     -moz-box-shadow: -1px 1px 21px 2px rgba(0, 0, 0, 0.48);
@@ -84,5 +90,41 @@ section {
 .product img {
     width: 100%;
     height: 200px;
+    object-fit: cover;
     border-radius: 5%;
+}
+
+.product h3,p {
+    padding-left: 10%;
+}
+.product h3{
+    color: rgb(103, 147, 0);
+}
+.product p {
+    padding-bottom: 10%;
+}
+@media screen and (max-width: 1024px){
+    section{
+        grid-template-columns: repeat(3, 30%);
+        grid-template-rows: auto;
+    }
+}
+@media screen and (max-width: 768px){
+    section{
+        grid-template-columns: repeat(2, 42%);
+        grid-template-rows: auto;
+    }
+}
+@media screen and (max-width: 425px){
+    nav div {
+        display: none;
+    }
+    aside{
+        display: none;
+    }
+    section{
+        width: 100%;
+        grid-template-columns: 80%;
+        grid-template-rows: auto;
+    }
 }
