--- a/CC4E/HomeWork/PersonalFoodShop/style.css
+++ b/CC4E/HomeWork/PersonalFoodShop/style.css
@@ -14,10 +14,11 @@ nav {
     padding: 20px 25px;
     display: flex;
     justify-content: space-between;
-    box-shadow: 1px 11px 43px 7px rgba(0, 0, 0, 0.48);
-    -webkit-box-shadow: 1px 11px 43px 7px rgba(0, 0, 0, 0.48);
-    -moz-box-shadow: 1px 11px 43px 7px rgba(0, 0, 0, 0.48);
+    box-shadow: 1px 5px 40px 0px rgba(0, 0, 0, 0.48);
+    /* -webkit-box-shadow: 1px 11px 43px 7px rgba(0, 0, 0, 0.48);
+    -moz-box-shadow: 1px 11px 43px 7px rgba(0, 0, 0, 0.48); */
 }
+
 nav h2 {
     font-family: 'Alkatra', cursive;
 }
@@ -37,7 +38,6 @@ nav h2 {
 aside {
     background-color: rgb(222, 233, 233);
     width: 30%;
-    /* height: 100vh; */
     padding-top: 30px;
     display: flex;
     align-items: center;
@@ -49,7 +49,6 @@ aside input {
     height: 42px;
     width: 80%;
     border-radius: 15px;
-
 }
 
 aside button {
@@ -57,7 +56,6 @@ aside button {
     border-radius: 10px;
     font-size: 20px;
     font-weight: bold;
-    /* color: white; */
     background-color: chartreuse;
     border: none;
 }
@@ -71,9 +69,9 @@ section {
     padding-top: 30px;
     padding-bottom: 30px;
     display: grid;
-    grid-template-columns: repeat(4, 20%);
+    grid-template-columns: repeat(4, 22%);
     grid-template-rows: auto;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     justify-content: space-evenly;
     gap: 50px 0;
 }
@@ -94,35 +92,61 @@ section {
     border-radius: 5%;
 }
 
-.product h3,p {
+.product h3 {
     padding-left: 10%;
 }
-.product h3{
+.product p {
+    padding-left: 10%;
+}
+
+.product h3 {
     color: rgb(103, 147, 0);
 }
-.product p {
-    padding-bottom: 10%;
+
+.product h3:hover {
+    color: rgb(88, 125, 248);
 }
-@media screen and (max-width: 1024px){
-    section{
+
+.product p {
+    padding-bottom: 5%;
+    color: red;
+    font-weight: 300;
+}
+
+footer {
+    display: flex;
+    height: 100px;
+    background: rgb(221, 221, 221);
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+
+@media screen and (max-width: 1024px) {
+    section {
         grid-template-columns: repeat(3, 30%);
         grid-template-rows: auto;
     }
 }
-@media screen and (max-width: 768px){
-    section{
+
+@media screen and (max-width: 768px) {
+    section {
         grid-template-columns: repeat(2, 42%);
         grid-template-rows: auto;
     }
 }
-@media screen and (max-width: 425px){
+
+@media screen and (max-width: 425px) {
     nav div {
         display: none;
     }
-    aside{
+
+    aside {
         display: none;
     }
-    section{
+
+    section {
         width: 100%;
         grid-template-columns: 80%;
         grid-template-rows: auto;
